[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Menu/TaskBar.gd" type="Script" id=1]
[ext_resource path="res://Images/Menu/MainIcon.png" type="Texture" id=2]
[ext_resource path="res://Images/Menu/MainIconHover.png" type="Texture" id=3]

[node name="TaskBar" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 81.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="UpTimer" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="DownTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 0.25
one_shot = true
autostart = false

[node name="MainIcon" type="TextureButton" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 78.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )
_sections_unfolded = [ "Rect" ]


